fix to make sbu-logo link accessible via z-index

--- a/5questions/css/nav.css
+++ b/5questions/css/nav.css
@@ -11,6 +11,11 @@ header .logo-link {
 	display: block;
 }
 
+header .logo-link.sbu-logo {
+	position: relative;
+	z-index: 1;
+}
+
 header .sb-logo,
 header .ribbon-logo-desktop,
 header .site-logo-desktop {
